# libbfdec-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  libbfdec++.cpp  libbfdec++.h
quickjs-fake/: quickjs-config.h  quickjs.h
test/: test.cpp
